1099번 문제 해결

--- a/Algorithm(Python)/CodeUp_note.ipynb
+++ b/Algorithm(Python)/CodeUp_note.ipynb
@@ -378,11 +378,97 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 1099문제"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1 1 1 1 1 1 1 1 1\n",
+      "1 0 0 1 0 0 0 0 0 1\n",
+      "1 0 0 1 1 1 0 0 0 1\n",
+      "1 0 0 0 0 0 0 1 0 1\n",
+      "1 0 0 0 0 0 0 1 0 1\n",
+      "1 0 0 0 0 1 0 1 0 1\n",
+      "1 0 0 0 0 1 2 0 0 1\n",
+      "1 0 0 0 0 1 0 0 0 1\n",
+      "1 0 0 0 0 0 0 0 0 1\n",
+      "1 1 1 1 1 1 1 1 1 1\n",
+      "1 1 1 1 1 1 1 1 1 1 \n",
+      "1 9 9 1 0 0 0 0 0 1 \n",
+      "1 0 9 1 1 1 0 0 0 1 \n",
+      "1 0 9 9 9 9 9 1 0 1 \n",
+      "1 0 0 0 0 0 9 1 0 1 \n",
+      "1 0 0 0 0 1 9 1 0 1 \n",
+      "1 0 0 0 0 1 9 0 0 1 \n",
+      "1 0 0 0 0 1 0 0 0 1 \n",
+      "1 0 0 0 0 0 0 0 0 1 \n",
+      "1 1 1 1 1 1 1 1 1 1 \n"
+     ]
+    }
+   ],
+   "source": [
+    "#### 내가 푼 풀이\n",
+    "\n",
+    "zeros = [[0]*10 for _ in range(10)]\n",
+    "# 입력된 데이터부터 초기화 배열에 동기화시키기\n",
+    "for sero in range(10):\n",
+    "    garo = list(map(int, input().split()))\n",
+    "    for i, g in enumerate(garo):\n",
+    "        zeros[sero][i] = g\n",
+    "\n",
+    "# 먹이 찾아가기!\n",
+    "#1. 개미집은 2,2 즉, 1행1열 인덱스에서 시작!\n",
+    "#2. 개미 경로 표시 \n",
+    "i = 1\n",
+    "j = 1\n",
+    "while True:\n",
+    "    if zeros[1][1] == 2:\n",
+    "        zeros[1][1] = 9\n",
+    "        break\n",
+    "    else:\n",
+    "        zeros[1][1] = 9\n",
+    "        # 오른쪽으로 이동할 수 있는 경우가 먹이찾는 것보다 우선!\n",
+    "        if zeros[i][j+1] == 0:\n",
+    "            zeros[i][j+1] = 9\n",
+    "            j += 1 \n",
+    "            # 8,8 좌표 즉, 막다른 골목에 도달했을 경우(index 초과 방지!)\n",
+    "            if i == 8 and j == 8:\n",
+    "                break\n",
+    "        # 오른쪽에 벽이 있어서 아래쪽으로 이동하는 경우\n",
+    "        elif zeros[i][j+1] == 1:\n",
+    "            if zeros[i+1][j] == 2:\n",
+    "                zeros[i+1][j] = 9\n",
+    "                break\n",
+    "            else:\n",
+    "                zeros[i+1][j] = 9\n",
+    "            i += 1\n",
+    "            # 8,8 좌표 즉, 막다른 골목에 도달했을 경우(index 초과 방지!)\n",
+    "            if i == 8 and j == 8:\n",
+    "                break\n",
+    "        # 오른쪽으로 가다가 먹이를 찾은 경우\n",
+    "        elif zeros[i][j+1] == 2:\n",
+    "            zeros[i][j+1] = 9\n",
+    "            break\n",
+    "        # 아래쪽으로 가다가 먹이를 찾은 경우\n",
+    "        elif zeros[i+1][j] == 2:\n",
+    "            zeros[i+1][j] = 9\n",
+    "            break\n",
+    "\n",
+    "for i in range(10):\n",
+    "    for j in range(10):\n",
+    "        print(zeros[i][j], end=' ')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "code",
