--- a/Algorithm(Python)/Greedy.ipynb
+++ b/Algorithm(Python)/Greedy.ipynb
@@ -158,6 +158,117 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 예제 2) 숫자 카드 게임"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 4\n",
+      "7 3 1 8\n",
+      "3 3 5 4\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "##### 모범 답안1 ##### => min() 함수를 사용하는 방법\n",
+    "n, m = map(int, input().split())\n",
+    "\n",
+    "result = 0\n",
+    "\n",
+    "for _ in range(n):\n",
+    "    # 한 줄씩 데이터 입력!\n",
+    "    data = list(map(int, input().split()))\n",
+    "    # 입력된 한 줄의 데이터에서 최솟값 선택!\n",
+    "    min_v = min(data)\n",
+    "    result = max(result, min_v)\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 4\n",
+      "7 3 1 8\n",
+      "3 3 5 4\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "##### 모범 답안2 ##### => 이중 loop 문 사용\n",
+    "n, m = map(int, input().split())\n",
+    "\n",
+    "result = 0\n",
+    "\n",
+    "for _ in range(n):\n",
+    "    data = list(map(int, input().split()))\n",
+    "    min_v = 10001 # 값의범위가 1 <= x <= 10000이라고 지정되어서\n",
+    "    # 한 줄 입력 데이터 내부에서 최솟값 선택\n",
+    "    for a in data:\n",
+    "        min_v = min(min_v, a)\n",
+    "    # 각 줄 입력 데이터의 최솟값들 중 최댓값을 선택\n",
+    "    result = max(result, min_v)\n",
+    "    \n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 4\n",
+      "7 3 1 8\n",
+      "3 3 5 4\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "##### 나의 풀이 #####\n",
+    "\n",
+    "# N=행, M=열\n",
+    "n, m = map(int, input().split())\n",
+    "init = [[0] * m for _ in range(n)]\n",
+    "\n",
+    "for i in range(n):\n",
+    "    init[i][:m] = map(int, input().split())\n",
+    "\n",
+    "# 각 행의 최솟값들 중 최댓값을 갖는 행을 선택하자\n",
+    "# 각 행의 최솟값\n",
+    "dic = {}\n",
+    "for idx in range(n):\n",
+    "    # 행번호 : 그 행의 최솟값\n",
+    "    dic[idx] = min(init[idx])\n",
+    "inverse = [(v, k) for k, v in dic.items()]\n",
+    "max_idx = max(inverse)[1]\n",
+    "result = min(init[max_idx])\n",
+    "print(result)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -182,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   },
   "toc": {
    "base_numbering": 1,
