--- a/Algorithm(Python)/Greedy.ipynb
+++ b/Algorithm(Python)/Greedy.ipynb
@@ -269,6 +269,137 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 예제 3) n=1이 될 때까지"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000000000000 3\n",
+      "48\n",
+      "19.61521939699992\n"
+     ]
+    }
+   ],
+   "source": [
+    "import timeit\n",
+    "\n",
+    "start = timeit.default_timer()\n",
+    "##### 모범 답안1 ##### => n이 10만 이하일 경우에만 적합 -> while문이 여러개라서 시간 복잡도가 큰듯..\n",
+    "n, k = map(int, input().split())\n",
+    "result = 0\n",
+    "\n",
+    "# n >= k, k로 계속 나누기 or n-1 시키기\n",
+    "while n >= k:\n",
+    "    # n % k == 0 될 때까지, n-1시키기\n",
+    "    while n % k != 0:\n",
+    "        n -= 1\n",
+    "        result += 1\n",
+    "    # n % k == 0 이면, n // k\n",
+    "    n //= k\n",
+    "    result += 1\n",
+    "\n",
+    "# n < k(즉, n이 k보다 작아 절대로 n이 k의 배수가 될 수 없을 경우 -> n이 1이 될 때까지 계속 n-1시켜주기)\n",
+    "while n > 1:\n",
+    "    n -= 1\n",
+    "    result += 1\n",
+    "    \n",
+    "end = timeit.default_timer() - start\n",
+    "\n",
+    "print(result)\n",
+    "print(end)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000000000000 3\n",
+      "48\n",
+      "2.1303094289996807\n"
+     ]
+    }
+   ],
+   "source": [
+    "start = timeit.default_timer()\n",
+    "##### 모범 답안2 ##### => n이 100억 이상 큰 수가 될 경우\n",
+    "n, k = map(int, input().split())\n",
+    "result = 0 \n",
+    "\n",
+    "while True:\n",
+    "    ### n >= k 때, k로 나눌지 n-1을 할지 정하는 코드 ###\n",
+    "    # n보다는 같거나 작은 수들 중 k의 배수인 n값(또는 n보다 작은 수들 중 최댓값)을 할당\n",
+    "    target = (n // k) * k\n",
+    "    result += (n - target) # 이 값이 n에 -1을 몇 번 수행할지의 횟수를 의미 for n이 k의 배수가 되도록 하기 위해\n",
+    "    n = target # k의 배수를 n으로 재할당\n",
+    "    \n",
+    "    # n < k 때, while문 탈출시켜서 다른 연산 수행!\n",
+    "    if n < k:\n",
+    "        break\n",
+    "    # n을 k로 나누기\n",
+    "    n //= k\n",
+    "    result += 1\n",
+    "    \n",
+    "### n < k 때, n을 1로 만들기 위해서는 무조건 n-1하는 방법 밖에 없음! ###\n",
+    "# ex) n = 3이면 -1을 2번해야 1로만듦. 즉, n-1=2와 동일\n",
+    "# ex) n = 7이면 -1을 6번해야 1로만듦. 즉, n-1=6와 동일\n",
+    "result += (n - 1)\n",
+    "\n",
+    "end = timeit.default_timer() - start\n",
+    "print(result)\n",
+    "print(end)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000000000000 3\n",
+      "48\n",
+      "1.703114024000115\n"
+     ]
+    }
+   ],
+   "source": [
+    "start = timeit.default_timer()\n",
+    "##### 나의 풀이 #####\n",
+    "n, k = map(int, input().split())\n",
+    "# 연산 수행 횟수\n",
+    "count = 0\n",
+    "\n",
+    "while n != 1:\n",
+    "    # n % k == 0:\n",
+    "    if n % k == 0:\n",
+    "        n = n / k\n",
+    "        count += 1\n",
+    "    else:\n",
+    "        n -= 1\n",
+    "        count += 1\n",
+    "end = timeit.default_timer() - start\n",
+    "print(count)\n",
+    "print(end)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
